# git-together

./: .editorconfig  .git-together  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  License.md  README.md  appveyor.yml
.github/workflows/: ci.yml  release.yml  test-ci.yml
bats/: integration.bats
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: author.rs  config.rs  errors.rs  git.rs  lib.rs  main.rs
tests/: integration.bats  integration.rs  integration_test.rs  tests.rs
