[package]
name = "git-together-ssh"
version = "0.1.1"
authors = ["Alpha Chen <alpha.chen@gmail.com>, Alden Davidson <alden.davidson@sage.northcom.mil>"]
edition = "2021"
license-file = "License.md"
description = "Enable seamless git usage when paired programming on a shared machine"
homepage = "https://gitlab.com/section-31/git-together-ssh"
documentation = "https://gitlab.com/section-31/git-together-ssh/-/blob/main/README.md"
repository = "https://gitlab.com/section-31/git-together-ssh"
readme = "https://gitlab.com/section-31/git-together-ssh/-/blob/main/README.md"

[dependencies]
dialoguer = "0.10.4"
error-chain = "0.12"
git2 = "0.17"
shellexpand = "3.1.0"
